--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,7 @@ jobs:
           path:
             ./site
       - name: List site
-      - run: echo Site files
-      - run: echo | ls ./site
+        run: echo Site files && echo | ls ./site
       - name: Deploy
         uses: peaceiris/actions-gh-pages@373f7f263a76c20808c831209c920827a82a2847 # v3
         with:
