--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           name: build-output
           path: ./site
+          retention-days: 0.05
   deploy:
     needs: build
     environment:
@@ -40,21 +41,8 @@ jobs:
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
+      - name: Deploy GitHub Pages site
+        uses: actions/deploy-pages@v4.0.5
         with:
-          name: build-output
-          path: ./site
-      - name: List Site (deploy)
-        run: echo Site files && echo | ls ./site
-      - name: Upload Artifact
-        uses: actions/upload-pages-artifact@v3.0.1
-        with:
-          path: ./site
-          retention-days: 0.05
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@373f7f263a76c20808c831209c920827a82a2847 # v3
-        with:
-          publish_dir: ./site
-          github_token: ${{ github.token }}
-          full_commit_message: 'Build'
+          token: ${{ github.token }}
+          artifact_name: build-output
