--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,15 +46,23 @@ jobs:
         with:
           name: build-output
           path: ./the_build/
+      - name: Cleanup (1)
+        uses: jimschubert/delete-artifacts-action@v1
+        with:
+          artifact_name: build-output
       - name: List Site (deploy)
         run: echo Site files && echo | ls ./the_build/
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v3.0.1
         with:
+          name: github-pages
           path: ./the_build/
           retention-days: 0.05
       - name: Deploy GitHub Pages site
         uses: actions/deploy-pages@v4.0.5
         with:
-          token: ${{ github.token }}
+          artifact_name: github-pages
+      - name: Cleanup (2)
+        uses: jimschubert/delete-artifacts-action@v1
+        with:
           artifact_name: github-pages
