Add the stoopid gh-pages branch part

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,12 +66,10 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Echo repo (test)
-        run: echo ${{ github.repository }}
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository }}
+          repository: ${{ github.repository }}/branches/gh-pages
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
